--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -7,11 +7,9 @@
             </td>
             <td>
                 {% set user_link %}
-                    <span class="user_popup">
-                        <a href="{{ url_for('main.user', username=post.author.username) }}">
-                            {{ post.author.username }}
-                        </a>
-                    </span>
+                    <a class="user_popup" href="{{ url_for('main.user', username=post.author.username) }}">
+                        {{ post.author.username }}
+                    </a>
                 {% endset %}
                 {{ _('%(username)s said %(when)s',
                     username=user_link, when=moment(post.timestamp).fromNow()) }}
@@ -21,8 +19,8 @@
                 <br><br>
                 <span id="translation{{ post.id }}">
                     <a href="javascript:translate(
-                                '#post{{ post.id }}',
-                                '#translation{{ post.id }}',
+                                'post{{ post.id }}',
+                                'translation{{ post.id }}',
                                 '{{ post.language }}',
                                 '{{ g.locale }}');">{{ _('Translate') }}</a>
                 </span>
