--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,14 +1,9 @@
 {% extends 'base.html' %}
-{% import 'bootstrap/wtf.html' as wtf %}
+{% import "bootstrap_wtf.html" as wtf %}
 
-{% block app_content %}
+{% block content %}
     <h1>{{ _('Sign In') }}</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-    </div>
-    <br>
+    {{ wtf.quick_form(form) }}
     <p>{{ _('New User?') }} <a href="{{ url_for('auth.register') }}">{{ _('Click to Register!') }}</a></p>
     <p>
         {{ _('Forgot Your Password?') }}
