--- a/app/templates/user_popup.html
+++ b/app/templates/user_popup.html
@@ -1,32 +1,27 @@
-<table class="table">
-    <tr>
-        <td width="64" style="border: 0px;"><img src="{{ user.avatar(64) }}"></td>
-        <td style="border: 0px;">
-            <p><a href="{{ url_for('main.user', username=user.username) }}">{{ user.username }}</a></p>
-            <small>
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-                {% if user.last_seen %}
-                <p>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('lll') }}</p>
-                {% endif %}
-                <p>{{ _('%(count)d followers', count=user.followers.count()) }}, {{ _('%(count)d following', count=user.followed.count()) }}</p>
-                {% if user != current_user %}
-                    {% if not current_user.is_following(user) %}
-                    <p>
-                        <form action="{{ url_for('main.follow', username=user.username) }}" method="post">
-                            {{ form.hidden_tag() }}
-                            {{ form.submit(value=_('Follow'), class_='btn btn-default btn-sm') }}
-                        </form>
-                    </p>
-                    {% else %}
-                    <p>
-                        <form action="{{ url_for('main.unfollow', username=user.username) }}" method="post">
-                            {{ form.hidden_tag() }}
-                            {{ form.submit(value=_('Unfollow'), class_='btn btn-default btm-sm') }}
-                        </form>
-                    </p>
-                    {% endif %}
-                {% endif %}
-            </small>
-        </td>
-    </tr>
-</table>
+<div>
+  <img src="{{ user.avatar(64) }}" style="margin: 5px; float: left">
+  <p><a href="{{ url_for('main.user', username=user.username) }}">{{ user.username }}</a></p>
+  {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+  <div class="clearfix"></div>
+  {% if user.last_seen %}
+  <p>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('lll') }}</p>
+  {% endif %}
+  <p>{{ _('%(count)d followers', count=user.followers_count()) }}, {{ _('%(count)d following', count=user.following_count()) }}</p>
+  {% if user != current_user %}
+    {% if not current_user.is_following(user) %}
+    <p>
+      <form action="{{ url_for('main.follow', username=user.username) }}" method="post">
+        {{ form.hidden_tag() }}
+        {{ form.submit(value=_('Follow'), class_='btn btn-outline-primary btn-sm') }}
+      </form>
+    </p>
+    {% else %}
+    <p>
+      <form action="{{ url_for('main.unfollow', username=user.username) }}" method="post">
+        {{ form.hidden_tag() }}
+        {{ form.submit(value=_('Unfollow'), class_='btn btn-outline-primary btn-sm') }}
+      </form>
+    </p>
+    {% endif %}
+  {% endif %}
+</div>
