--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,21 +1,21 @@
-    <table class="table table-hover">
-        <tr>
-            <td width="70px">
-                <a href="{{ url_for('main.user', username=post.author.username) }}">
-                    <img src="{{ post.author.avatar(70) }}" />
-                </a>
-            </td>
-            <td>
-                {% set user_link %}
-                    <a class="user_popup" href="{{ url_for('main.user', username=post.author.username) }}">
-                        {{ post.author.username }}
-                    </a>
-                {% endset %}
-                {{ _('%(username)s said %(when)s',
+<table class="table table-hover">
+    <tr>
+        <td width="70px">
+            <a href="{{ url_for('main.user', username=post.author.username) }}">
+                <img src="{{ post.author.avatar(70) }}"/>
+            </a>
+        </td>
+        <td>
+            {% set user_link %}
+            <a class="user_popup" href="{{ url_for('main.user', username=post.author.username) }}">
+                {{ post.author.username }}
+            </a>
+            {% endset %}
+            {{ _('%(username)s said %(when)s',
                     username=user_link, when=moment(post.timestamp).fromNow()) }}
-                <br>
-                <span id="post{{ post.id }}">{{ post.body }}</span>
-                {% if post.language and post.language != g.locale %}
+            <br>
+            <span id="post{{ post.id }}">{{ post.body }}</span>
+            {% if post.language and post.language != g.locale %}
                 <br><br>
                 <span id="translation{{ post.id }}">
                     <a href="javascript:translate(
@@ -24,7 +24,20 @@
                                 '{{ post.language }}',
                                 '{{ g.locale }}');">{{ _('Translate') }}</a>
                 </span>
-                {% endif %}
+            {% endif %}
+
+        </td>
+        <td>
+
+        </td>
+        <td>
+
+        </td>
+        <td></td>
+        {% if post.user_id == current_user.id %}
+            <td>
+                <button style="border-radius: 10px; margin-top: 20px"><a class="page-link" href="{{ url_for('main.delete_post',post_id=post.id) }}">Delete post</a></button>
             </td>
-        </tr>
-    </table>
+        {% endif %}
+    </tr>
+</table>
