--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <table class="table table-hover">
+    <table class="table table-hover" >
         <tr>
-            <td width="256px"><img src="{{ user.avatar(256) }}"></td>
+            <td width="256px"><img src="{{ user.profile_picture }}" style="height: 250px;width: 250px; border-radius: 50%" alt="Set a profile picture"></td>
             <td>
-                <h1>{{ _('User') }}: {{ user.username }}</h1>
+                <h1>{{ _('Username') }}: {{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}
                 <p>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('LLL') }}</p>
