--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -2,7 +2,7 @@
     <tr>
         <td width="70px">
             <a href="{{ url_for('main.user', username=post.author.username) }}">
-                <img src="{{ post.author.profile_picture }}" style="border-radius: 50%; height: 70px;width: 70px"/>
+                <img src="{{ url_for('static', filename='images/'+current_user.profile_picture) }}" style="border-radius: 50%; height: 70px;width: 70px"/>
             </a>
         </td>
         <td>
