--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -3,5 +3,7 @@
 
 {% block content %}
     <h1>{{ _('Edit Profile') }}</h1>
+    <script src="//cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
     {{ wtf.quick_form(form) }}
+    <script>CKEDITOR.replace('about_me')</script>
 {% endblock %}
