--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,16 +3,16 @@
 {% block content %}
     <table class="table table-hover" >
         <tr>
-            <td width="256px"><img src="{{ user.profile_picture }}" style="height: 250px;width: 250px; border-radius: 50%" alt="Set a profile picture"></td>
+            <td width="256px"><img src="{{ url_for('static', filename='images/'+current_user.profile_picture) }}" style="height: 250px;width: 250px; border-radius: 50%" alt="Set a profile picture"></td>
             <td>
                 <h1>{{ _('Username') }}: {{ user.username }}</h1>
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}
                 <p>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('LLL') }}</p>
                 {% endif %}
                 <p>{{ _('%(count)d followers', count=user.followers_count()) }}, {{ _('%(count)d following', count=user.following_count()) }}</p>
                 {% if user == current_user %}
                 <p><a href="{{ url_for('main.edit_profile') }}">{{ _('Edit your profile') }}</a></p>
+                {% if user.about_me %}<p>About me: {{ user.about_me|safe }}</p>{% endif %}
 {#                {% if not current_user.get_task_in_progress('export_posts') %}#}
 {#                <p><a href="{{ url_for('main.export_posts') }}">{{ _('Export your posts') }}</a></p>#}
 {#                {% endif %}#}
