--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,10 @@
 
 {% block content %}
     <style>
-        #cke_post{
+        #cke_post {
 
-                background-color: black;
-                border: 1px solid;
+            background-color: black;
+            border: 1px solid;
 
 
         }
@@ -16,13 +16,20 @@
     <h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1>
     {% if form %}
         {{ wtf.quick_form(form) }}
-        <script>CKEDITOR.replace('post')</script>
+        <script>CKEDITOR.replace('post', {
+            width: '70%',
+            height: 100
+        })</script>
     {% endif %}
     <br>
     <br>
-    {% for post in posts %}
-        {% include '_post.html' %}
-    {% endfor %}
+    <div id="posts" style="display: flex;flex-direction: column">
+        {% for post in posts %}
+
+                    {% include '_post.html' %}
+
+        {% endfor %}
+    </div>
     <nav aria-label="Post navigation">
         <ul class="pagination">
             <li class="page-item{% if not prev_url %} disabled{% endif %}">
