--- a/app/templates/user_popup.html
+++ b/app/templates/user_popup.html
@@ -1,5 +1,10 @@
 <div>
-  <img src="{{ user.avatar(64) }}" style="margin: 5px; float: left">
+    {% if user.profile_picture and user.profile_picture_exists() %}
+        <img src="{{ url_for('static', filename='images/'+user.profile_picture) }}" style="margin: 5px; float: left; border-radius: 50%;height: 40px;width: 40px" alt="Set a profile picture">
+    {% else %}
+        <img src="{{ url_for('static', filename='images/'+'default_profile_picture.png') }}" style="margin: 5px; float: left; border-radius: 50%;height: 40px;width: 40px" alt="Set a profile picture">
+
+    {% endif %}
   <p><a href="{{ url_for('main.user', username=user.username) }}">{{ user.username }}</a></p>
   {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
   <div class="clearfix"></div>
