modify user button delete

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -42,7 +42,7 @@
                     <p>
                         <button style="border-radius: 10px; margin-top: 20px"><a class="page-link"
                                                                                  href="{{ url_for('main.delete',id=user.id) }}">Delete
-                            user</a></button>
+                            account</a></button>
                     </p>
                 {% endif %}
                 {% if user != current_user %}
